--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,9 +8,24 @@
 
 
 {  
-name:"SONE-796 มิรุ",
-image:"https://fourhoi.com/sone-796/cover-n.jpg",
-url:"https://surrit.com/54477577-5db5-4954-8a3e-c5c71c8f45e7/1080p/video.m3u8",
+name:"SHKD-929 มิโนริ ฮัตสึเนะ",
+image:"https://fourhoi.com/shkd-929-english-subtitle/cover-n.jpg",
+url:"https://surrit.com/c2cf179e-aff9-42eb-acf7-79f64b84353e/720p/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"ADN-036 Rin Sakuragi - ริน ซากุระงิ",
+image:"https://fourhoi.com/adn-036/cover-n.jpg",
+url:"https://surrit.com/7e1e5956-ea17-446c-a65e-f1569ed4f626/1280x720/video.m3u8",
 "referer": "https://missav.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
