--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -9,11 +9,66 @@
 
 
 
+
+{  
+name:"ปากกัด ตีนถีบ Ziam (2025) NETFLIX",
+image:"https://img.fw4free.com/postor/20250709144241pc2l6kgGJaCa5LKoE9VkL7lqy5n.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Ziam_2025/Ziam_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+
+
+
+
+
+
+
+
+
   
 {  
-name:"Bad Country คู่ระห่ำล้างเมืองโฉด (2014)",
-image:"https://img.fw4free.com/postor/20190806190552bad-country-535d23509af56.jpg",
-url:"https://m1free.inwstream.com:1936/movie3/Bad_Country_2014/Bad_Country_2014_TH_1080p.mp4/chunk.m3u8",
+name:"โดมิโน สวยโคตรมหากาฬ (2005)",
+image:"https://img.fw4free.com/postor/20250709101724pZdIfYkM5kV5BaUDYzwzgmpUxno.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Domino_2005/Domino_2005_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+
+
+
+
+
+
+
+
+
+  
+{  
+name:"แก๊งสเตอร์ สควอด หน่วยกุดหัวแก๊งสเตอร์ (2013)",
+image:"https://img.fw4free.com/postor/20190708154450gangster-squad-524432134b2ae.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Gangster_Squad_2013/Gangster_Squad_2013_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+
+
+
+
+
+
+
+
+
+
+  
+{  
+name:"เพชฌฆาตโค่นเพชฌฆาต (2012)",
+image:"https://img.fw4free.com/postor/20190627124330one-in-the-chamber-5c30472caca6c.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/One_in_the_Chamber_2012/One_in_the_Chamber_2012_TH_1080p.mp4/chunk.m3u8",
 "referer": "https://www.123-hd.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
