--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -11,6 +11,24 @@
 
 
 {  
+name:"คู่สืบ​ คู่อันตราย (2025) NETFLIX",
+image:"https://img.fw4free.com/postor/20250711150853v3aq0JZIjXr8okdnBR7yzn9kcbd.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Almost_Cops_2025/Almost_Cops_2025_TH_1080p.mp4/chunk.m3u8",
+"referer": "https://www.123-hd.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},  
+
+
+
+
+
+
+
+
+
+  
+{  
 name:"ปากกัด ตีนถีบ Ziam (2025) NETFLIX",
 image:"https://img.fw4free.com/postor/20250709144241pc2l6kgGJaCa5LKoE9VkL7lqy5n.jpg",
 url:"https://m1free.inwstream.com:1936/movie4/Ziam_2025/Ziam_2025_TH_1080p.mp4/chunk.m3u8",
