--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,16 @@
 
 
 {  
+name:"STAR-935 Iori Furukawa - อิโอริ ฟุรุคาวะ",
+image:"https://fourhoi.com/star-935/cover-n.jpg",
+url:"https://surrit.com/c4fbd17c-e000-42a6-9cd0-87c7c5ce9ce3/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+{  
 name:"PRED-790 มิซึกิ อาโอโนะ",
 image:"https://fourhoi.com/pred-790/cover-n.jpg",
 url:"https://surrit.com/036bc5b0-6959-408e-9ea1-9f6d0d1bac0b/720p/video.m3u8",
