--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,96 @@
 
 
 {  
+name:"STAR-824 Iori Furukawa - อิโอริ ฟุรุคาวะ",
+image:"https://fourhoi.com/star-824/cover-n.jpg",
+url:"https://surrit.com/e60489f9-0af6-40da-a971-ca16bb8b4e91/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"AVOP-353 Iori Furukawa - อิโอริ ฟุรุคาวะ",
+image:"https://fourhoi.com/avop-353/cover-n.jpg",
+url:"https://surrit.com/80600eb8-469c-42cd-b923-ba45f3f6bb02/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"STAR-813 Iori Furukawa - อิโอริ ฟุรุคาวะ",
+image:"https://fourhoi.com/star-813/cover-n.jpg",
+url:"https://surrit.com/0bbf59da-1d08-4ad5-b0ca-e713a76ebbb2/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"STAR-872 Iori Furukawa - อิโอริ ฟุรุคาวะ",
+image:"https://fourhoi.com/star-872-uncensored-leak/cover-n.jpg",
+url:"https://surrit.com/c44bf07e-3337-4091-bd4a-8d13ab215d5d/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"STAR-861 Iori Furukawa - อิโอริ ฟุรุคาวะ",
+image:"https://fourhoi.com/star-861/cover-n.jpg",
+url:"https://surrit.com/094e2021-95e0-4bf8-8e86-59def69a65af/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
+name:"STAR-921 Iori Furukawa - อิโอริ ฟุรุคาวะ",
+image:"https://fourhoi.com/star-921/cover-n.jpg",
+url:"https://surrit.com/42c3e9d5-92f0-450d-aec0-8217464c7565/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"STAR-935 Iori Furukawa - อิโอริ ฟุรุคาวะ",
 image:"https://fourhoi.com/star-935/cover-n.jpg",
 url:"https://surrit.com/c4fbd17c-e000-42a6-9cd0-87c7c5ce9ce3/1280x720/video.m3u8",
