--- a/Nexxxxxter.html
+++ b/Nexxxxxter.html
@@ -8,6 +8,21 @@
 
 
 {  
+name:"RVG-032 Yuna Shiina",
+image:"https://fourhoi.com/rvg-032/cover-n.jpg",
+url:"https://surrit.com/384d9739-317c-4a10-9a1a-63ed4944f0f3/1280x720/video.m3u8",
+"referer": "https://missav.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+
+
+
+
+{  
 name:"STAR-824 Iori Furukawa - อิโอริ ฟุรุคาวะ",
 image:"https://fourhoi.com/star-824/cover-n.jpg",
 url:"https://surrit.com/e60489f9-0af6-40da-a971-ca16bb8b4e91/1280x720/video.m3u8",
